brasero-app: don't try and show the main window if it hasn't been created

It's possible to open brasero without creating the main window, such as
when opening an image file directly triggering the image burning dialogue.
In these cases trying to show the main window when the dialogue is
dismissed is an error, brasero should just exit.

https://bugzilla.gnome.org/show_bug.cgi?id=655513